docker/k8s/05-mimir.yaml
apiVersion: v1
kind: Service
metadata:
  name: mimir
  namespace: vizme
spec:
  selector:
    app: mimir
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mimir
  namespace: vizme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mimir
  template:
    metadata:
      labels:
        app: mimir
    spec:
      containers:
        - name: mimir
          image: grafana/mimir:latest
          args: ["-config.file=/etc/mimir/mimir.yaml"]
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: cfg
              mountPath: /etc/mimir
            - name: data
              mountPath: /data
      volumes:
        - name: cfg
          projected:
            sources:
              - configMap:
                  name: mimir-config
                  items:
                    - key: mimir.yaml
                      path: mimir.yaml
              - configMap:
                  name: mimir-alertmanager-fallback
                  items:
                    - key: alertmanager-fallback-config.yaml
                      path: alertmanager-fallback-config.yaml
        - name: data
          persistentVolumeClaim:
            claimName: mimir-data
