docker/k8s/06-alertmanager.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: vizme
spec:
  selector:
    app: alertmanager
  ports:
    - name: http
      port: 9093
      targetPort: 9093
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: vizme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      containers:
        - name: alertmanager
          image: prom/alertmanager:latest
          args:
            - "--config.file=/etc/alertmanager/alertmanager.yml"
            - "--storage.path=/alertmanager"
          ports:
            - containerPort: 9093
              name: http
          volumeMounts:
            - name: cfg
              mountPath: /etc/alertmanager
      volumes:
        - name: cfg
          configMap:
            name: alertmanager-config
