docker/k8s/10-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: vizme
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: vizme
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: vizme-frontend:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
